<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CryptoTool</string>
    <string name="logo_description">CryptoTool Logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_share">Share</string>
    <string name="action_open">Open</string>
    <string name="action_details">Details</string>
    <string name="action_save">Save</string>
    <string name="action_clear_fields">Clear Fields</string>
    <string name="action_aboutCharCount">About Character Count</string>
    <string name="action_aboutIC">About Index of Coincidence</string>
    <string name="action_delete">Delete</string>
    <string name="action_send">Send</string>
    <string name="action_about">About</string>
    <string name="action_exploreSaved">Explore Saved Texts</string>
    <string name="action_rate">Rate this App</string>
    <string name="action_encrypt">Encrypt</string>
    <string name="action_calculate">Generate Hash</string>
    <string name="action_copy">Copy</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_decrypt">Decrypt</string>
    <string name="action_break">Break Encryption</string>
    <string name="action_generate_strong_password">Generate</string>
    <string name="title_activity_encrypt">Encryption</string>
    <string name="title_activity_decrypt">Decryption</string>
    <string name="title_activity_breakEncryption">Break Encryption</string>
    <string name="title_activity_calculateHashes">Generate Hashes</string>
    <string name="title_activity_strongPasswordGenerator">Generate Strong Password</string>
    <string name="title_activity_pronounceablePasswordGenerator">Pronounceable Password</string>
    <string name="title_activity_exploreSavedText">Explore Saved Texts</string>
    <string name="title_activity_statsActivity">Stats</string>
    <string name="title_activity_preferences">CryptoTool Preferences</string>
    <string name="hint_keyword">Keyword</string>
    <string name="hint_title">Title</string>
    <string name="hint_plaintext">Input</string>
    <string name="hint_encryptedtext">Input</string>
    <string name="hint_output">Output</string>
    <string name="hint_hasehd_output">Hashed Output</string>
    <string name="action_plus">+</string>
    <string name="label_password_length">Password Length</string>
    <string name="switch_lower_case">Lower Case</string>
    <string name="radio_CVV">ConsonantVowelVowel</string>
    <string name="label_numberOfPasswords">Number of passwords</string>
    <string name="radio_CV">ConsonantVowel</string>
    <string name="radio_custom">Custom</string>
    <string name="switch_upper_case">Upper Case</string>
    <string name="switch_symbols">Symbols</string>
    <string name="switch_digits">Digits</string>
    <string name="switch_similar_characters">No similar looking characters</string>
    <string name="label_switchBy">Switch By</string>
    <string name="label_compareHashButton">"Compare Hashes"</string>
    <string name="label_calculateHashButton">"Generate Hashes"</string>
    <string name="checkbox_spaces">Keep whitespaces </string>
    <string name="checkbox_saveinput">Input</string>
    <string name="checkbox_saveoutput">Output</string>
    <string name="checkbox_comparehash">Compare hashes</string>
    <string name="action_ExploreAll">All</string>
    <string name="action_ExplorePlainText">Plain Texts</string>
    <string name="action_ExploreEncrypted">Encrypted Texts</string>
    <string name="action_ExploreDecrypted">Decrypted Texts</string>
    <string name="action_ExploreBrokenEncryptionText">Broken Encryption Texts</string>
    <string name="action_ExploreSamples">Sample Texts</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="action_select">Select</string>
    <string name="action_OK">OK</string>
    <string name="label_saveTexts">What do you want to save?</string>
    <string name="action_Consonant">Consonant</string>
    <string name="action_Vowel">Vowel</string>
    <string name="label_CustomSequence">Create pronounceable sequence</string>

    <string-array name="encrypt_scheme_array">
        <item>Encrypt with:</item>
        <item>  Caesar\'s</item>
        <item>  Vigenere</item>
    </string-array>
    <string-array name="decrypt_scheme_array">
        <item>Decrypt with:</item>
        <item>  Caesar\'s</item>
        <item>  Vigenere</item>
    </string-array>


</resources>