<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rspn.cryptotool.MainActivity" >

    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="100"
        android:title="@string/action_preferences"
        app:showAsAction="never"/>
   	
   	<item
        android:id="@+id/action_manageSaved"
        android:orderInCategory="200"
        android:title="@string/action_exploreSaved"
        app:showAsAction="never"/>
   	
   	<item
        android:id="@+id/action_rateApp"
        android:orderInCategory="300"
        android:title="@string/action_rate"
        app:showAsAction="never"/>
   	
   	
   	<!-- 
   	<item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/action_about"
        app:showAsAction="never"/>
     -->
    

</menu>