<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <CheckBox
            android:id="@+id/checkBox_saveInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_saveinput" />

        <EditText
            android:id="@+id/editText_inputTitle"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_title" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <CheckBox
            android:id="@+id/checkBox_saveOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_saveoutput" />

        <EditText
            android:id="@+id/editText_outputTitle"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_title" >
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/button_Cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/button_Save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="35dp"
            android:text="@string/action_save" />
    </RelativeLayout>

</LinearLayout>