<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_CustomSequence"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Consonant"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/action_Consonant"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_Vowel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/action_Vowel"
            android:textAllCaps="false" />

        <ImageButton
            android:id="@+id/imageButton_backspace"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:src="@drawable/ic_hardware_keyboard_backspace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView_customSequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:hint="Your pronounceable sequence here"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/button_OK_CustomSequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/action_OK" />

        <Button
            android:id="@+id/button_Cancel_CustomSequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/action_cancel" />
    </RelativeLayout>

</LinearLayout>