<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layoutInStrongPasswordActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="460dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="0.36"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_password_length" />

                            <EditText
                                android:id="@+id/strongPasswordLength_edit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:layout_marginLeft="10dp" />
                        </LinearLayout>

                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="111dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp">

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/switch_lower_case"
                                android:id="@+id/checkBox_lowerCase"
                                android:layout_column="0"
                                android:checked="true" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/switch_upper_case"
                                android:id="@+id/checkbox_upperCase"
                                android:layout_column="1"
                                android:checked="true" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp">

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/switch_digits"
                                android:id="@+id/checkBox_digits"
                                android:layout_column="0"
                                android:checked="true" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/switch_symbols"
                                android:id="@+id/checkBox_symbols"
                                android:layout_column="1"
                                android:checked="true" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/switch_similar_characters"
                                android:id="@+id/checkBox_excludeSimilarLookingCharacters"
                                android:layout_column="0"
                                android:checked="true" />
                        </TableRow>
                    </TableLayout>

                    <LinearLayout
                        android:layout_width="285dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="15dp"
                        android:weightSum="1">

                        <Button
                            android:id="@+id/run_generateStrongPassword"
                            style="?android:attr/buttonStyleSmall"
                            android:onClick="generateStrongPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginLeft="65dp"
                            android:layout_marginStart="65dp"
                            android:background="@drawable/button_shape"
                            android:text="@string/action_generate_strong_password" />
                    </LinearLayout>

                    <ScrollView
                        android:id="@+id/scrollView_InBreakActivity"
                        android:layout_width="fill_parent"
                        android:layout_height="125dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/simpleborder">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:id="@+id/textView_strongPassword" />
                    </ScrollView>
                    <Button
                        android:id="@+id/copyStrongPassword"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="130dp"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.35"
                        android:background="@drawable/button_shape"
                        android:text="@string/action_copy" />
                </LinearLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView_InStrongPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-4246477151358404/4737268172"></com.google.android.gms.ads.AdView>
        </RelativeLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/navigation_listInStrongPasswordActivity"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#FFFFFF"></ListView>

</android.support.v4.widget.DrawerLayout>