<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layoutInCalculateHashesActivity"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/mainCalculateHashes_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/layout_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/spinner_hashAlgorithms"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/crypto_spinner"
                        android:gravity="center" />

                    <CheckBox
                        android:id="@+id/checkBox_compareHashes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkbox_comparehash" />
                </LinearLayout>

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="145dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/simpleborder"
                    android:padding="5dp" >

                    <EditText
                        android:id="@+id/edit_inputHash"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/hint_plaintext"
                        android:inputType="textMultiLine" />
                </ScrollView>

                <LinearLayout
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/calculate_hash"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.35"
                        android:background="@drawable/button_shape"
                        android:gravity="center"
                        android:text="@string/action_calculate" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bottomCalculateHashes_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical" >

                    <ScrollView
                        android:id="@+id/scrollView_hashedText"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:background="@drawable/simpleborder" >

                        <EditText
                            android:id="@+id/edit_hashedText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/hint_output"
                            android:inputType="textMultiLine" />
                    </ScrollView>

                    <Button
                        android:id="@+id/copyToClipboard_hash"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="130dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="0.35"
                        android:background="@drawable/button_shape"
                        android:text="@string/action_copy" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView_InCalculateHashesActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-4246477151358404/2419979375" >
            </com.google.android.gms.ads.AdView>
        </RelativeLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/navigation_listInCalculateHashesActivity"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#FFFFFF" >
    </ListView>

</android.support.v4.widget.DrawerLayout>